# ai-studio-template

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md  docker-compose.yml  instruction.md  package-lock.json  package.json
.claude/: memory.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  db.rs  error.rs  events.rs  lib.rs  routing.rs  sidecar.rs  system.rs
apps/desktop/src-tauri/src/commands/: agents.rs  approval_rules.rs  budget.rs  chat.rs  inspector.rs  knowledge_base.rs  mcp.rs  mod.rs  plugins.rs  providers.rs  runs.rs  sessions.rs  settings.rs  templates.rs  triggers.rs  workflows.rs
apps/desktop/src-tauri/src/webhook/: auth.rs  mod.rs  rate_limit.rs  server.rs
apps/desktop/src-tauri/src/workflow/: engine.rs  live.rs  mod.rs  types.rs  validation.rs
apps/desktop/src-tauri/src/workflow/executors/: aggregator.rs  approval.rs  cron_trigger.rs  email_send.rs  exit.rs  file_glob.rs  file_read.rs  file_write.rs  http_request.rs  input.rs  iterator.rs  knowledge_base.rs  llm.rs  loop_node.rs  mod.rs  output.rs  router.rs  shell_exec.rs  subworkflow.rs  tool.rs  transform.rs  validator.rs  webhook_trigger.rs
apps/desktop/src-tauri/src/workflow/rag/: chunker.rs  format.rs  index.rs  mod.rs  search.rs
apps/desktop/src-tauri/templates/: README.md  agentic-search.json  code-review.json  codebase-explorer.json  content-moderator.json  daily-meeting-digest.json  data-pipeline.json  deploy-config-sample.md  email-classifier.json  hybrid-intelligence.json  knowledge-qa.json  meeting-notes.json  multi-model-compare.json  rag-search.json  research.json  safe-executor.json  self-refine.json  smart-deployer-rag.json  smart-deployer.json  translation-pipeline.json  webcam-monitor.json  webhook-chat-api.json
apps/sidecar/: .env.example  Dockerfile  requirements.txt  server.py
apps/ui/: package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
data/sample-projects/: demo-project.json
docs/: FUTURE_CAPABILITIES.md  hybrid-intelligence-use-cases.md  node-editor-guide.md  show-hn-draft.md  tool-node.md
docs/guides/: node-reference.md
docs/reviews/: README.md  (+39 more)
(+155 files in other folders)
