[package]
name = "ai-studio"
version = "0.1.0"
description = "AI Studio Desktop Application"
authors = ["AI Studio Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["time", "sync", "process", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
regex = "1"
thiserror = "2"
async-trait = "0.1"
jsonschema = "0.28"
url = "2"
base64 = "0.22"
libc = "0.2"
serde_json_path = "0.7"
glob = "0.3"
memmap2 = "0.9"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
